fix: text alignment in auth pages in smaller screens

--- a/src/pages/auth/Login/login.module.scss
+++ b/src/pages/auth/Login/login.module.scss
@@ -16,6 +16,7 @@
   h1 {
     font-size: 4rem;
     font-weight: 200;
+    text-align: center;
   }
 
   svg {
@@ -25,4 +26,5 @@
 
 .title {
   margin-bottom: 1em;
+  text-align: center;
 }
